# selgist

./: .gitignore  README.md  pyproject.toml
selgist/: fetcher.py  gen.py  main.py  types_.py
