[tool.poetry]
name = "selgist"
version = "0.1.0"
description = ""
authors = ["oovec <oovec@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
toml = "^0.10.2"
jinja2 = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
